--- a/css/styles.css
+++ b/css/styles.css
@@ -2,6 +2,71 @@
     text-decoration: underline;
 }
 
+#avatar {
+    border: solid;
+    border-width: 2px;
+    border-color: darkslategray;
+    border-radius: 100%;
+}
+
+#spider {
+    width: 25%;
+    float: left;
+    margin-right: 30px;
+}
+
+#data {
+    width: 25%;
+    float: right;
+    margin-left: 30px;
+}
+
+.c {
+    margin-top: 30px;
+    position: relative;
+    top: 10px;
+    font-size: .8rem;
+    font-weight: normal;
+    color: white;
+}
+
+.go {
+    padding: 2px 5px;
+    background-color: white;
+    color: white;
+    transition: background-color .4s;
+}
+
+.go:hover {
+    background-color: red;
+    transition: background-color 2s;
+}
+
+.profile {
+    margin-top: 80px;
+    margin-bottom: 100px;
+}
+
+.skills {
+    margin-top: 80px;
+    margin-bottom: 80px
+}
+
+.skill-row {
+    padding: 10px 0px;
+    margin: 100px auto 100px auto;
+    width: 40%;
+    text-align: left;
+}
+
+.contact-me {
+    margin-top: 80px;
+}
+
+.subtitle {
+    font-weight: normal;
+}
+
 .top-cloud {
     position: absolute;
     right: 300px;
@@ -15,17 +80,19 @@
 }
 
 .top-container {
-    background-color: #e1f8f5;
+    background-color: #eaf6f6;
     position: relative;
     padding-top: 100px;
 }
 
 .middle-container {
-
+    line-height: 2;
+    margin-bottom: 80px;
 }
 
 .bottom-container {
-
+    padding: 50px;
+    background-color: #65bfbf
 }
 
 body {
@@ -35,14 +102,40 @@ body {
 }
 
 h1 {
-    margin-top: 0;
+    margin: 50px auto 0 auto;
     font-family: 'Sacramento', cursive;
+    font-size: 562.5%;
+    color: #66BFBF;
 }
 
 h2 {
     font-family: 'Montserrat', sans-serif;
+    font-size: 2.5rem;
+    color: #66BFBF;
 }
 
 h3 {
     font-family: 'Montserrat', sans-serif;
+    color: #11999E;
+}
+
+a {
+    color: #11999E;
+    text-decoration: none;
+    font-family: 'Montserrat', sans-serif;
+    font-weight: bold;
+}
+
+p {
+    color: #40514E;
+    font-weight: bold;
+}
+
+hr {
+    text-align: center;
+    width: 60px;
+    border: 0 dotted #d3d3d3;
+    border-bottom-width: 7px;
+    height: 0px;
+    clear: both;
 }
